# advent-of-code-2018

./: .gitattributes  LICENSE  Makefile  Setup.hs  aoc2018.cabal
inputs/: day12.in  day12.sample.in  day13.sample.in  day8.sample.in
src/: Day.hs.sample  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  LazyStdin.hs  Main.hs
src/Fabs/: IntSetWithLast.hs  LazyStdin.hs
